--- a/Antonin.htm
+++ b/Antonin.htm
@@ -122,7 +122,7 @@
                     src="img/butthome2.gif" border="0" width="60"
                     height="25"></a></td>
                     <td align="center" width="67">&nbsp;</td>
-                    <td align="center" width="128"><a href="mailto:jan@pelgrimfamilie.net"><img
+                    <td align="center" width="128"><a href="mailto:pelgrim.jan@gmail.com"><img
                     src="img/buttmail2.gif" border="0" width="75"
                     height="25"></a></td>
                     <td align="center" width="43">&nbsp;</td>
