--- a/ChrGerKerk.htm
+++ b/ChrGerKerk.htm
@@ -82,7 +82,7 @@ ProductID="Hr. B." w:st="on">
         dat de Schiedammers (en omgeving) zich nog eens over de foto willen buigen?</font><p class="MsoPlainText">
         <font face="Verdana" color="#000080">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         Bij deze mijn hartelijke dank daarvoor,
-        <a href="mailto:jan@pelgrimfamilie.net">jan pelgrim.</a> </font></td>
+        <a href="mailto:pelgrim.jan@gmail.com">jan pelgrim.</a> </font></td>
     </tr>
   </table>
   <table border="5" cellpadding="5" cellspacing="5" width="750" id="table2">
@@ -144,7 +144,7 @@ groet,&nbsp; Jan Pelgrim</font></p>
         <td valign="middle" align="center"><a href="index.html" target="_top"><font face="Verdana" color="#800000"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td valign="middle" align="center">&nbsp;</td>
-        <td valign="middle" align="center"><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td valign="middle" align="center"><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
         <td valign="middle" align="center"><a href="#boven"><img src="img/butttop2.gif"
