--- a/Delfshaven090206.htm
+++ b/Delfshaven090206.htm
@@ -163,7 +163,7 @@ A:HOVER {text-decoration: underline;}
         <td align="center"><a href="index.html" target="_top"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td align="center">&nbsp;</td>
-        <td align="center"><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td align="center"><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td align="center">&nbsp;</td>
         <td align="center">&nbsp;</td>
