--- a/Europa-Wereld.htm
+++ b/Europa-Wereld.htm
@@ -1492,7 +1492,7 @@ werelddelen</font><img border="0" src="../WorldOnline/globe[1].gif" width="48" h
             <p align="left">
             <a name="boven649">
             <img border="0" src="../WorldOnline/new2.jpg" width="10" height="10"></a><b><font color="#FFFFFF" size="2" face="Verdana">
-            <a name="boven" href="mailto:jan@pelgrimfamilie.net">
+            <a name="boven" href="mailto:pelgrim.jan@gmail.com">
             <font color="#FFFFFF">NEDERLANDSE ANTILLEN</font></a></font></b><a name="boven"><font size="2" color="#FFFFFF">
             </font>
             </td>
@@ -1582,7 +1582,7 @@ werelddelen</font><img border="0" src="../WorldOnline/globe[1].gif" width="48" h
             <tr>
             <td width="100%" height="17" valign="top" bgcolor="#CC3300">
               <b>
-              <a name="boven651" href="mailto:jan@pelgrimfamilie.net"><font color="#FFFFFF" face="Verdana" size="2">LINK?-Error?
+              <a name="boven651" href="mailto:pelgrim.jan@gmail.com"><font color="#FFFFFF" face="Verdana" size="2">LINK?-Error?
               Hier
               melden svp</font></a></b>
             </td>
