--- a/GenmeijvKort.htm
+++ b/GenmeijvKort.htm
@@ -119,7 +119,7 @@ verbeteringen en aanvullingen zie ik graag tegemoet!</font></p>
         <td><a href="index.html" target="_top"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
         <td><a href="#boven"><img src="img/butttop2.gif"
