--- a/GezinAndre1.htm
+++ b/GezinAndre1.htm
@@ -79,7 +79,7 @@ content="text/html; charset=utf-8">
         <td></a><a href="index.html" target="_top"><font face="Verdana"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td><font face="Verdana">&nbsp;</font></td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><font face="Verdana"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><font face="Verdana"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></font></a></td>
         <td><font face="Verdana">&nbsp;</font></td>
         <td><a href="#boven"><font face="Verdana"><img src="img/butttop2.gif"
