--- a/Links2-Jan.htm
+++ b/Links2-Jan.htm
@@ -2814,7 +2814,7 @@ v.Straaten</b></font></a></font><b><font face="Verdana" size="2"></a></font></b>
               <p align="right">
             <b>
             <font size="2" face="Verdana">
-              <a name="boven455" href="mailto:jan@pelgrimfamilie.net">©webmaster</a></font></b></td>
+              <a name="boven455" href="mailto:pelgrim.jan@gmail.com">©webmaster</a></font></b></td>
           </tr>
         </table>
       </div>
