--- a/PelgrimSites.html
+++ b/PelgrimSites.html
@@ -809,7 +809,7 @@ A:HOVER {text-decoration: underline;}
 <tr>
   <td width="551" height="25" style="border-top-width:0; border-right-width:0; border-bottom-width:0; border-left-width:0;> 
 <p align=" left"><font color="#800000">Do you know some other Pelgrim/Pilgram/Pilgrim-links?
-  </font><a href="mailto:jan@pelgrimfamilie.net"><img
+  </font><a href="mailto:pelgrim.jan@gmail.com"><img
                 src="img/buttmail2.gif" border="0" width="75"
                 height="25"></a></a> <font color="#800000">me. Thank You</font></td>
   </tr>
@@ -838,7 +838,7 @@ A:HOVER {text-decoration: underline;}
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
                 <td align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><img
+                href="mailto:pelgrim.jan@gmail.com"><img
                 src="img/buttmail2.gif" border="0" width="75"
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
