--- a/WaarheenPelgrim.htm
+++ b/WaarheenPelgrim.htm
@@ -500,7 +500,7 @@ Het werd onder andere teruggevonden in de catacomben.<br>
             height="25"></font></a></td>
             <td align="center"><font face="Verdana" size="2" color="#800000">&nbsp;</font></td>
             <td align="center"><a
-            href="mailto:jan@pelgrimfamilie.net"><font face="Verdana" size="2" color="#800000"><img
+            href="mailto:pelgrim.jan@gmail.com"><font face="Verdana" size="2" color="#800000"><img
             src="img/buttmail2.gif" border="0" width="75"
             height="25"></font></a></td>
             <td align="center"><font face="Verdana" size="2" color="#800000">&nbsp;</font></td>
