--- a/badsachsa.htm
+++ b/badsachsa.htm
@@ -119,7 +119,7 @@ height="348" align="left"></a></p>
       </tr>
     </table>
 </div>
-<p align="right"><font size="2" color="#800000" face="Verdana"><a href="mailto:jan@pelgrimfamilie.net">CD-rom
+<p align="right"><font size="2" color="#800000" face="Verdana"><a href="mailto:pelgrim.jan@gmail.com">CD-rom
 bestellen? Stuur een mailtje</a></font></p>
 
 <hr>
@@ -902,7 +902,7 @@ color="#0000FF" face="Arial">
         <td><a href="index.html" target="_top"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
         <td><a href="#boven"><img src="img/butttop2.gif"
