--- a/famblad8.htm
+++ b/famblad8.htm
@@ -149,7 +149,7 @@ scrolldelay="120" width="34%">Wie levert het volgende pakkende stukje? Stuur een
         <td><a href="hoofdpagina.html"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
         <td><a href="#boven"><img src="img/butttop2.gif"
