--- a/gd/pelgrime/gd-hoofd.htm
+++ b/gd/pelgrime/gd-hoofd.htm
@@ -784,7 +784,7 @@ e-mail (zie onder).</font></p>
         <img
         src="../../img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="mailto:jan@pelgrimfamilie.net">
+        <td><a href="mailto:pelgrim.jan@gmail.com">
         <img
         src="../../img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
