--- a/herman.htm
+++ b/herman.htm
@@ -99,7 +99,7 @@ pagina!</font></p>
         <td></a><a href="index.html" target="_top"><font face="Verdana" size="2" color="#800000"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td><font face="Verdana" size="2" color="#800000">&nbsp;</font></td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><font face="Verdana" size="2" color="#800000">
+        <td><a href="mailto:pelgrim.jan@gmail.com"><font face="Verdana" size="2" color="#800000">
         </font><font face="Verdana" size="2" color="#800000">
         <a title="Via de Pelgrimsite; Orgels Herman" href="mailto:hjpelgrim54@gmail.com?subject=Via de Pelgrimsite; Orgels Herman"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></font></a></td>
