--- a/hoofdpag2.html
+++ b/hoofdpag2.html
@@ -469,7 +469,7 @@ De diverse families Pelgrim met een letter gecodeerd kwam ik aanvankelijk op </f
                     height="25"></a></td>
                     <td align="center">&nbsp;</td>
                     <td align="center"><a
-                    href="mailto:jan@pelgrimfamilie.net"><img
+                    href="mailto:pelgrim.jan@gmail.com"><img
                     src="img/buttmail2.gif" border="0" width="75"
                     height="25"></a></td>
                     <td align="center">&nbsp;</td>
