--- a/hoofdpag4.html
+++ b/hoofdpag4.html
@@ -3889,7 +3889,7 @@ beroepen (foto's)<br>
           </tr>
             <tr>
             <td width="100%" height="17" bgcolor="#333333">
-              <b><a name="boven633" href="mailto:jan@pelgrimfamilie.net"><font color="#FFFFFF" face="Verdana" size="2">LINK?-Error?
+              <b><a name="boven633" href="mailto:pelgrim.jan@gmail.com"><font color="#FFFFFF" face="Verdana" size="2">LINK?-Error?
               Hier
               melden svp</font></a></b><font face="Verdana" size="2"> </font>
             </td>
@@ -3900,7 +3900,7 @@ beroepen (foto's)<br>
             <b>
             <font size="2" face="Verdana">
             &nbsp;</font><a name="boven155"><font face="Verdana" size="2" color="#800000"><img border="0" src="../WorldOnline/new2.jpg" width="10" height="10"></font></a><font size="2" face="Verdana">&nbsp;
-            <a name="boven85" href="mailto:jan@pelgrimfamilie.net">©webmaster</a></font></b></td>
+            <a name="boven85" href="mailto:pelgrim.jan@gmail.com">©webmaster</a></font></b></td>
           </tr>
         </table>
       </div>
@@ -3927,7 +3927,7 @@ beroepen (foto's)<br>
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
                 <td align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><img
+                href="mailto:pelgrim.jan@gmail.com"><img
                 src="img/buttmail2.gif" border="0" width="75"
                 height="25"></a></td>
                 <td align="center">&nbsp;</td>
