--- a/hoofdpagDuits.html
+++ b/hoofdpagDuits.html
@@ -186,7 +186,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="89" hei
         <p align="left">
         <b>
         <font face="Verdana" size="2" color="#800000">© 1990-2015 Jan Pelgrim,
-        Hillegom, update 19 Januari 2015</font></b></p>
+        Hillegom, update 10 Juli 2016</font></b></p>
         <div align="center">
           <center>
           <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -197,7 +197,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="89" hei
                 width="60" height="25"></a></font></td>
               <td width="25%">
                 <p align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><font
+                href="mailto:pelgrim.jan@gmail.com"><font
                 size="2"><img src="img/buttmail2.gif" border="0"
                 width="75" height="25"></font></a></td>
               <td width="25%">
