--- a/hoofdpagEngels.html
+++ b/hoofdpagEngels.html
@@ -166,14 +166,14 @@ searchpossibilities and schedules</font></a><font color="#800000">.</font>
               If you have remarks or want to be excluded from these files / this site please
               </font>
         <font size="2" color="#800000" face="Verdana">
-              <a href="mailto:jan@pelgrimfamilie.net">contact me.</a>
+              <a href="mailto:pelgrim.jan@gmail">contact me.</a>
               </font>
         <br>
         </p>
         <p align="left">
         <b>
-        <font face="Verdana" size="2" color="#800000">© 1990-2015 Jan Pelgrim,
-        Hillegom, last changed 19 Jan. 2015</font></b></p>
+        <font face="Verdana" size="2" color="#800000">&copy; 1990-2016 Jan Pelgrim,
+        Hillegom, last changed July 10 2016</font></b></p>
   <div align="center">
           <center>
           <table border="0" cellpadding="0" cellspacing="0" width="100%">
