--- a/hoofdpagina-reserve.html
+++ b/hoofdpagina-reserve.html
@@ -332,7 +332,7 @@ en de geschiedenis van uw familie" border="0" Ontdek align="left" width="125" he
                 width="60" height="25"></a></font></td>
               <td width="25%">
                 <p align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><font
+                href="mailto:pelgrim.jan@gmail.com"><font
                 size="2"><img src="img/buttmail2.gif" border="0"
                 width="75" height="25"></font></a></td>
               <td width="25%">
