--- a/hoofdpagina.html
+++ b/hoofdpagina.html
@@ -145,7 +145,7 @@ A:HOVER {text-decoration: underline;}
         <b>
         <font face="Verdana" size="2" color="#800000">
         <a name="boven">
-        &copy; 1990-2015 Jan Pelgrim, Hillegom, bijgewerkt 19 Januari 2015</a></font></b></p>
+        &copy; 1990-2016 Jan Pelgrim, Hillegom, bijgewerkt 10 Juli 2016</a></font></b></p>
         <a name="boven">
         </a>
         <div align="center">
@@ -190,7 +190,7 @@ A:HOVER {text-decoration: underline;}
                 width="60" height="25"></a></font></td>
               <td width="25%">
                 <p align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><font
+                href="mailto:pelgrim.jan@gmail.com"><font
                 size="2"><img src="img/buttmail2.gif" border="0"
                 width="75" height="25"></font></a></td>
               <td width="25%">
@@ -311,7 +311,7 @@ A:HOVER {text-decoration: underline;}
           <tr>
             <td width="149" height="18">
               <p align="center"><font face="Verdana" size="2" color="#800000">&nbsp;<br>
-              &nbsp;Hillegom,14-12-2010</font></p>
+              &nbsp;Hillegom,14-12-2015</font></p>
             </td>
           </tr>
         </center>
