--- a/http:/hoofdpagEngels.html
+++ b/http:/hoofdpagEngels.html
@@ -74,7 +74,7 @@ A:HOVER {text-decoration: underline;}
         Furthermore you can look at two name lists, anyhow I wish you a lot of success in finding
         what you want.
 
-        Do you have suggestions / ammendments please let me know. You can do this via <a href="mailto:jan@pelgrimfamilie.net">e-mail</a>
+        Do you have suggestions / ammendments please let me know. You can do this via <a href="mailto:pelgrim.jan@gmail.com">e-mail</a>
         or by <a href="http://htmlgear.lycos.com/guest/control.guest?u=390814jan&amp;i=1&amp;a=sign">signing the guestbook</a>. </font></p>
         <p align="left"><font face="Verdana" size="2">If you are a <font color="#800000"> <font face="Arial">PELGRIM</font>,</font> a&nbsp;<font color="#800000"><font face="Arial">
         PILGRAM</font>,</font>
@@ -237,7 +237,7 @@ searchpossibilities and schedules</font></a><font color="#800000">.</font>
               If you have remarks or want to be excluded from these files / this site please
               </font>
         <font size="2" color="#800000" face="Verdana">
-              <a href="mailto:jan@pelgrimfamilie.net">contact me.</a>
+              <a href="mailto:pelgrim.jan@gmail.com">contact me.</a>
               </font>
         <br>
         </p>
@@ -255,7 +255,7 @@ searchpossibilities and schedules</font></a><font color="#800000">.</font>
                 width="60" height="25"></a></font></td>
               <td width="25%">
                 <p align="center"><a
-                href="mailto:jan@pelgrimfamilie.net"><font
+                href="mailto:pelgrim.jan@gmail.com"><font
                 size="2"><img src="img/buttmail2.gif" border="0"
                 width="75" height="25"></font></a></td>
               <td width="25%">
