--- a/Katwijk261102.htm
+++ b/Katwijk261102.htm
@@ -227,7 +227,7 @@ nogmaals onze dank en tot mails!</font></p>
         <td valign="middle" align="center"><a href="index.html" target="_top"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
-        <td valign="middle" align="center"><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td valign="middle" align="center"><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
         <td valign="middle" align="center"><a href="#boven"><img src="img/butttop2.gif"
