--- a/PilgramEU.htm
+++ b/PilgramEU.htm
@@ -96,7 +96,7 @@ A:HOVER {text-decoration: underline;}
         <td><a href="index.html" target="_top"><font face="Verdana" size="2" color="#800000"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td><font face="Verdana" size="2" color="#800000">&nbsp;</font></td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><font face="Verdana" size="2" color="#800000"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><font face="Verdana" size="2" color="#800000"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></font></a></td>
         <td><font face="Verdana" size="2" color="#800000">&nbsp;</font></td>
         <td><a href="#boven"><font face="Verdana" size="2" color="#800000"><img src="img/butttop2.gif"
