--- a/Wapen.htm
+++ b/Wapen.htm
@@ -77,7 +77,7 @@ Wordt vervolgd.</font></p>
         <td valign="middle" align="center"><a href="index.html" target="_top"><font face="Verdana" color="#800000"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td valign="middle" align="center">&nbsp;</td>
-        <td valign="middle" align="center"><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td valign="middle" align="center"><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
         <td valign="middle" align="center"><a href="#boven"><img src="img/butttop2.gif"
