--- a/boven.html
+++ b/boven.html
@@ -40,30 +40,7 @@ A:HOVER {text-decoration: underline;}
 
  <form>
   <p align="left">&nbsp; <select name="list" onchange="showpage(this.form);" size="1">
- <option value="/gd/pelgrimf/par-Ftak.htm">F-tak
- bijgewerkt 12-08-13</option>
- <option value="/gd/pelgrimb/parB-tak.htm">B-tak
- bijgewerkt 11-04-13
- </option>
- <option value="/gd/pelgrimc/parC-tak.htm">C-tak
- bijgewerkt 11-04-13</option>
- <option value="/gd/pelgrimg/parG-tak.htm">G-tak
- bijgewerkt 11-04-13
- </option>
- <option value="/gd/pelgrimp2/parP2tak.htm">P2-tak
- bijgewerk 11-04-13</option>
- <option value="/gd/pelgrimr/parR-tak.htm">R-tak
- bijgewerkt 11-04-13</option>
- <option value="/gd/pelgrimd/parD-tak.htm">D-tak
- bijgewerkt 11-04-13
- </option>
- <option value="/gd/pelgrime/parE-tak.htm">E-tak
- bijgewerkt 11-04-13
- </option>
- <option value="/gd/Meijvogel/ParMeijv.htm">Meijvogel
- bijgewerkt
- </option>
- <option value="/index.html">HOME</option>
+ <option value="http://www.pelgrimfamilie.net/index.html">HOME</option>
 </select><input type="button" value="Go" onclick="showpage(this.form);"></p>
 </form>
 <Script LANGUAGE="JavaScript">
@@ -71,7 +48,7 @@ A:HOVER {text-decoration: underline;}
   { var item = form.list.selectedIndex;
     choice = form.list.options[item].value;
     if (choice!="x")
-     top.location.href="http://"+(choice);
+     top.location.href=choice;
   };
 </script></td>
 </tr>
@@ -82,12 +59,12 @@ A:HOVER {text-decoration: underline;}
   <td valign="top">
       <form>
   <p align="left">&nbsp; <select name="list" onchange="showpage(this.form);" size="1">
- <option value="http://www.pelgrimfamilie.net/CatOnderwerp.htm">Div.Informatie</option>
- <option value="http://www.pelgrimfamilie.net/hoofdpag4.html">Diverse LINKS</option>
  <option value="http://www.pelgrimfamilie.net/hoofdpag3.html">FOTO... Nieuw/Oud</option>
  <option value="http://www.pelgrimfamilie.net/Kinderdijk.htm">Kinderdijk</option>
+ <option value="http://www.pelgrimfamilie.net/CatOnderwerp.htm">Div.Informatie</option>
+ <option value="http://www.pelgrimfamilie.net/hoofdpag4.html">Diverse LINKS</option>
  <option value="http://www.seniorweb.nl/">SeniorWeb</option>
- <option value="http://www.pelgrimfamilie.net/mailgroep.seniorweb.nl/gen/">SW-Genealogie
+ <option value="http://mailgroep.seniorweb.nl/gen/">SW-Genealogie
  <option value="http://www.nederland.fm/">Nederland.FM</option>
  <option value="http://www.pelgrimfamilie.net/index.html">HOME</option>
 </select><input type="button" value="Go" onclick="showpage(this.form);"></p>
