--- a/famblad7.htm
+++ b/famblad7.htm
@@ -135,8 +135,8 @@ Verder deed ik enig verslag van de maanden nadien.</font></h5>
 align="middle" bgcolor="#FFF4EA" scrollamount="7"
 scrolldelay="120" width="34%">Wie levert het volgende pakkende stukje? Stuur een mailtje...</marquee><br>
 <br>
-</font></a><a href="mailto:jan@pelgrimfamilie.net"><font
-color="#0000FF" face="Arial"><u>jan@pelgrimfamilie.net</u></font></a></p>
+</font></a><a href="mailto:pelgrim.jan@gmail.com"><font
+color="#0000FF" face="Arial"><u>pelgrim.jan@gmail.com</u></font></a></p>
 
 <div align="center">
   <center>
@@ -145,7 +145,7 @@ color="#0000FF" face="Arial"><u>jan@pelgrimfamilie.net</u></font></a></p>
       <td align="center">&nbsp;</td>
       <td align="center"><a href="index.html" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
       <td align="center">&nbsp;</td>
-      <td align="center"><a href="mailto:jan@pelgrimfamilie.net"><img src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
+      <td align="center"><a href="mailto:pelgrim.jan@gmail.com"><img src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
       <td align="center">&nbsp;</td>
       <td align="center"><a href="#boven"><img src="img/butttop2.gif" border="0" width="75" height="25"></a></td>
       <td align="center">&nbsp;</td>
