--- a/fambladInhoud.htm
+++ b/fambladInhoud.htm
@@ -264,7 +264,7 @@ scrolldelay="120" width="34%">Alle bijdragers alsnog bedankt...................<
         <td><a href="index.html" target="_top"><font face="verdana"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></font></a></td>
         <td><font face="verdana">&nbsp;</font></td>
-        <td><a href="mailto:jan@pelgrimfamilie.net"><font face="verdana"><img
+        <td><a href="mailto:pelgrim.jan@gmail.com"><font face="verdana"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></font></a></td>
         <td><font face="verdana">&nbsp;</font></td>
         <td><a href="#boven"><font face="verdana"><img src="img/butttop2.gif"
