--- a/foto30juni01.htm
+++ b/foto30juni01.htm
@@ -143,7 +143,7 @@ Volgend jaar weer?</font></p>
         <td valign="middle" align="center"><a href="index.html" target="_top"><img
         src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
-        <td valign="middle" align="center"><a href="mailto:jan@pelgrimfamilie.net"><img
+        <td valign="middle" align="center"><a href="mailto:pelgrim.jan@gmail.com"><img
         src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td valign="middle" align="center">&nbsp;</td>
         <td valign="middle" align="center"><a href="#boven"><img src="img/butttop2.gif"
