--- a/gd/pelgrimp2/gd-hoofd.htm
+++ b/gd/pelgrimp2/gd-hoofd.htm
@@ -13,7 +13,7 @@
     <tr>
       <td><font color="#800000"><B>Wie weet meer over dit schilderij, werd 
       geschilderd door een P. Pilgram&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </B>
-      </font><a name="boven1" href="mailto:jan@pelgrimfamilie.net">
+      </font><a name="boven1" href="mailto:pelgrim.jan@gmail.com">
         <img
         src="buttmail2.gif" border="0" width="75" height="25"></a><font color="#800000"><B>&nbsp;&nbsp;&nbsp;&nbsp; </B>
       </font></td>
@@ -410,7 +410,7 @@ e-mail (zie onder).</font></p>
         <img
         src="../../img/butthome2.gif" border="0" width="60" height="25"></a></td>
         <td>&nbsp;</td>
-        <td><a href="mailto:jan@pelgrimfamilie.net">
+        <td><a href="mailto:pelgrim.jan@gmail.com">
         <img
         src="../../img/buttmail2.gif" border="0" width="75" height="25"></a></td>
         <td>&nbsp;</td>
