--- a/gezocht.htm
+++ b/gezocht.htm
@@ -149,7 +149,7 @@ een mailtje...</marquee></font></p>
       </a>
       <td><a href="index.html" target="_top"><img src="img/butthome2.gif" border="0" width="60" height="25"></a></td>
       <td>&nbsp;</td>
-      <td><a href="mailto:jan@pelgrimfamilie.net"><img src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
+      <td><a href="mailto:pelgrim.jan@gmail.com"><img src="img/buttmail2.gif" border="0" width="75" height="25"></a></td>
       <td>&nbsp;</td>
       <td><a href="#boven"><img src="img/butttop2.gif" border="0" width="75" height="25"></a></td>
       <td></td>
