--- a/hoofdpag3.html
+++ b/hoofdpag3.html
@@ -358,7 +358,7 @@ exemplaren??)&nbsp;</font></p>
             height="25"></a></td>
             <td align="center">&nbsp;</td>
             <td align="center"><a
-            href="mailto:jan@pelgrimfamilie.net"><img
+            href="mailto:pelgrim.jan@gmail.com"><img
             src="img/buttmail2.gif" border="0" width="75"
             height="25"></a></td>
             <td align="center">&nbsp;</td>
